--- a/trajectoryModifier/static/css/style.css
+++ b/trajectoryModifier/static/css/style.css
@@ -145,6 +145,14 @@ html, body {
     align-self: stretch;
 }
 
+.element.hint {
+    background-color: rgba(177,254,117, 0.5);
+}
+
+.element.active {
+    background-color: rgba(177,254,117, 0.75);
+}
+
 .element:hover {
     background-color: white;
 }
