--- a/trajectoryModifier/static/css/style.css
+++ b/trajectoryModifier/static/css/style.css
@@ -103,6 +103,10 @@ html, body {
     padding: 0em;
 }
 
+#boxes > div {
+    text-align: right;
+}
+
 #elementSelector {
     position: absolute;
     left: 0em;
@@ -165,15 +169,15 @@ html, body {
     text-align: center;
 }
 
-.active-element > p {
+.active-element > p, .active-element > div {
     color: #3de369;
 }
 
-.self-element > p {
+.self-element > p, .self-element > div {
     color: #f74c43;
 }
 
-.some-element > p {
+.some-element > p, .some-element > div {
     color: rgb(59, 173, 227);
 }
 
@@ -224,6 +228,13 @@ html, body {
     justify-content: space-between;
     margin-left: 1em;
     margin-right: 1em;
+}
+
+.confidenceRange {
+    width: 90%;
+    text-align: right;
+    height:0;
+    overflow:visible;
 }
 
 .sizeButtonArea {
