--- a/trajectoryModifier/templates/index.html
+++ b/trajectoryModifier/templates/index.html
@@ -246,6 +246,9 @@
         {% for trajectory in trajectories %}
             <div id="id{{ trajectory.id }}" class="element hidden" onclick="handle_click_element(event);"
                  onmouseenter="handle_mouseenter_descriptor(event);" onmouseleave="handle_mouseleave_element(event);">
+                {% if trajectory.id != 0 %}
+                    <div class="confidenceRange">{{ '%0.2f'| format(trajectory["positions_rotations_and_boxes"] | map(attribute="confidence") | min) }}-{{ '%0.2f'| format(trajectory["positions_rotations_and_boxes"] | map(attribute="confidence") | max) }}</div>
+                {% endif %}
                 <div class="elementSVGContainer">
                     <img class="svgImg"
                          src="{{ url_for('static', filename='images/class'+trajectory.type|string+'.svg') }}"
